--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Call of Duty Zombies Tools for Easter Eggs!">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="codz_companion">
+  <meta name="apple-mobile-web-app-title" content="z_guides">
   <link rel="apple-touch-icon" href="icons/z-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="z-favicon.png"/>
 
-  <title>codz_companion</title>
+  <title>z_guides</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
